// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signup renders correctly 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <h1
      data-stylename="title"
    >
      Welcome to Hylo
    </h1>
    <p
      data-stylename="blurb"
    >
      Stay connected, organized, and engaged with your group.
    </p>
    <p
      data-stylename="or"
    >
      Enter your email to get started:
    </p>
    <TextInput
      aria-label="email"
      autoComplete="off"
      autoFocus={true}
      data-stylename="field"
      id="email"
      internalLabel="Email"
      label="email"
      name="email"
      onChange={[Function]}
      onEnter={[Function]}
      type="text"
      value=""
    />
    <Button
      color="gray"
      data-stylename="submit"
      label="Continue"
      onClick={null}
    />
  </div>
  <p
    data-stylename="or"
  >
    Or sign in with an existing account: 
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <GoogleButton
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Signup renders correctly with mobile redirect 1`] = `
<div>
  <div
    data-stylename="formWrapper"
  >
    <DownloadAppPortal
      url="some.url"
    />
    <h1
      data-stylename="title"
    >
      Welcome to Hylo
    </h1>
    <p
      data-stylename="blurb"
    >
      Stay connected, organized, and engaged with your group.
    </p>
    <p
      data-stylename="or"
    >
      Enter your email to get started:
    </p>
    <TextInput
      aria-label="email"
      autoComplete="off"
      autoFocus={true}
      data-stylename="field"
      id="email"
      internalLabel="Email"
      label="email"
      name="email"
      onChange={[Function]}
      onEnter={[Function]}
      type="text"
      value=""
    />
    <Button
      color="gray"
      data-stylename="submit"
      label="Continue"
      onClick={null}
    />
  </div>
  <p
    data-stylename="or"
  >
    Or sign in with an existing account: 
  </p>
  <div
    data-stylename="auth-buttons"
  >
    <FacebookButton
      onClick={[Function]}
    />
    <GoogleButton
      onClick={[Function]}
    />
  </div>
</div>
`;
